--- a/css/style.css
+++ b/css/style.css
@@ -113,4 +113,8 @@ h6 {
   max-width: 76.875rem;
   margin: 0 auto;
   padding: 0 0.9375rem;
+}
+
+div {
+  color: #008000;
 }/*# sourceMappingURL=style.css.map */
