--- a/scss/style.scss
+++ b/scss/style.scss
@@ -42,3 +42,6 @@ $background-color: #ffffff;
 //======================================== Підключення сторінок =================================================
 @import "./page/index";
 //===============================================================================================================
+div {
+   color: #008000;
+}
