--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,4 @@
+@import url(https://fonts.googleapis.com/css?family=Roboto:regular&display=swap);
 * {
   padding: 0px;
   margin: 0px;
@@ -21,7 +22,7 @@ body {
   color: #000;
   background-color: #ffffff;
   line-height: 1;
-  font-family: "";
+  font-family: "Roboto";
   font-size: 1rem;
   -ms-text-size-adjust: 100%;
   -moz-text-size-adjust: 100%;
@@ -33,7 +34,7 @@ body {
 input,
 button,
 textarea {
-  font-family: "";
+  font-family: "Roboto";
   font-size: inherit;
 }
 
