--- a/scss/style.scss
+++ b/scss/style.scss
@@ -3,7 +3,7 @@
 @import "./utils/mixins";
 //======================================== Підключення шрифтів ==================================================
 //&display=swap - додати при підключенні через плагін
-// @import url(https://fonts.googleapis.com/css?family=Roboto:regular&display=swap);
+@import url(https://fonts.googleapis.com/css?family=Roboto:regular&display=swap);
 
 // Підключити, якщо є локальні файли шрифтів
 //@import "fonts/_fonts";
@@ -14,7 +14,7 @@
 
 //?======================================== За замовчуванням шрифт ==============================================
 
-$fontFamily: "";
+$fontFamily: "Roboto";
 $fontSize: rem(16);
 
 $mainColor: #000;
