--- a/scss/style.scss
+++ b/scss/style.scss
@@ -14,7 +14,7 @@
 
 //?======================================== За замовчуванням шрифт ==============================================
 
-$fontFamily: "Roboto";
+$fontFamily: "Roboto", sans-serif;
 $fontSize: rem(16);
 
 $mainColor: #000;
